Remove getRaw